
SUBDIRS = \
backgrounds\
cities\
comets\
hands\
icons\
keyboard\
menu\
status\
tux

EXTRA_DIST = README_IMAGES.TXT\
down.png\
fishy-.png\
fishy0.png\
fishy1.png\
fishy2.png\
fishy3.png\
hidden.jpg\
insert1.png\
kcas1_1.jpg\
kcas1_2.jpg\
kcas1_3.jpg\
kcas1_4.jpg\
kcas2_1.jpg\
kcas2_2.jpg\
kcas2_3.jpg\
kcas2_4.jpg\
kcas3_1.jpg\
kcas3_2.jpg\
kcas3_3.jpg\
kcas3_4.jpg\
left.png\
line2.png\
main_bkg.png\
num_0.png\
nosound.png\
num_1.png\
num_2.png\
num_3.png\
num_4.png\
num_5.png\
num_6.png\
num_7.png\
num_8.png\
num_9.png\
pract.png\
right.png\
splat0.png\
sound.png\
standby.png\
title1.png\
tutor-alpha.png\
tutor-alpha2.png\
tutor.png\
tutor2.png\
tutor3.png\
tux0.png\
tux1.png\
tux2.png\
tux3.png\
up.png\
world.png

install-data-local:
	$(MKDIR_P) $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images
	$(INSTALL_DATA) $(srcdir)/README_IMAGES.TXT $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/README_IMAGES.TXT
	$(INSTALL_DATA) $(srcdir)/down.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/down.png
	$(INSTALL_DATA) $(srcdir)/fishy-.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/fishy-.png
	$(INSTALL_DATA) $(srcdir)/fishy0.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/fishy0.png
	$(INSTALL_DATA) $(srcdir)/fishy1.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/fishy1.png
	$(INSTALL_DATA) $(srcdir)/fishy2.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/fishy2.png
	$(INSTALL_DATA) $(srcdir)/fishy3.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/fishy3.png
	$(INSTALL_DATA) $(srcdir)/hidden.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/hidden.jpg
	$(INSTALL_DATA) $(srcdir)/insert1.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/insert1.png
	$(INSTALL_DATA) $(srcdir)/kcas1_1.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/kcas1_1.jpg
	$(INSTALL_DATA) $(srcdir)/kcas1_2.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/kcas1_2.jpg
	$(INSTALL_DATA) $(srcdir)/kcas1_3.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/kcas1_3.jpg
	$(INSTALL_DATA) $(srcdir)/kcas1_4.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/kcas1_4.jpg
	$(INSTALL_DATA) $(srcdir)/kcas2_1.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/kcas2_1.jpg
	$(INSTALL_DATA) $(srcdir)/kcas2_2.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/kcas2_2.jpg
	$(INSTALL_DATA) $(srcdir)/kcas2_3.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/kcas2_3.jpg
	$(INSTALL_DATA) $(srcdir)/kcas2_4.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/kcas2_4.jpg
	$(INSTALL_DATA) $(srcdir)/kcas3_1.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/kcas3_1.jpg
	$(INSTALL_DATA) $(srcdir)/kcas3_2.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/kcas3_2.jpg
	$(INSTALL_DATA) $(srcdir)/kcas3_3.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/kcas3_3.jpg
	$(INSTALL_DATA) $(srcdir)/kcas3_4.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/kcas3_4.jpg
	$(INSTALL_DATA) $(srcdir)/left.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/left.png
	$(INSTALL_DATA) $(srcdir)/line2.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/line2.png
	$(INSTALL_DATA) $(srcdir)/main_bkg.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/main_bkg.png
	$(INSTALL_DATA) $(srcdir)/num_0.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/num_0.png
	$(INSTALL_DATA) $(srcdir)/nosound.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/nosound.png
	$(INSTALL_DATA) $(srcdir)/num_1.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/num_1.png
	$(INSTALL_DATA) $(srcdir)/num_2.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/num_2.png
	$(INSTALL_DATA) $(srcdir)/num_3.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/num_3.png
	$(INSTALL_DATA) $(srcdir)/num_4.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/num_4.png
	$(INSTALL_DATA) $(srcdir)/num_5.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/num_5.png
	$(INSTALL_DATA) $(srcdir)/num_6.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/num_6.png
	$(INSTALL_DATA) $(srcdir)/num_7.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/num_7.png
	$(INSTALL_DATA) $(srcdir)/num_8.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/num_8.png
	$(INSTALL_DATA) $(srcdir)/num_9.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/num_9.png
	$(INSTALL_DATA) $(srcdir)/pract.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/pract.png
	$(INSTALL_DATA) $(srcdir)/right.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/right.png
	$(INSTALL_DATA) $(srcdir)/splat0.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/splat0.png
	$(INSTALL_DATA) $(srcdir)/sound.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/sound.png
	$(INSTALL_DATA) $(srcdir)/standby.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/standby.png
	$(INSTALL_DATA) $(srcdir)/title1.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/title1.png
	$(INSTALL_DATA) $(srcdir)/tutor-alpha.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/tutor-alpha.png
	$(INSTALL_DATA) $(srcdir)/tutor-alpha2.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/tutor-alpha2.png
	$(INSTALL_DATA) $(srcdir)/tutor.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/tutor.png
	$(INSTALL_DATA) $(srcdir)/tutor2.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/tutor2.png
	$(INSTALL_DATA) $(srcdir)/tutor3.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/tutor3.png
	$(INSTALL_DATA) $(srcdir)/tux0.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/tux0.png
	$(INSTALL_DATA) $(srcdir)/tux1.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/tux1.png
	$(INSTALL_DATA) $(srcdir)/tux2.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/tux2.png
	$(INSTALL_DATA) $(srcdir)/tux3.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/tux3.png
	$(INSTALL_DATA) $(srcdir)/up.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/up.png
	$(INSTALL_DATA) $(srcdir)/world.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/world.png

uninstall-local:
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/README_IMAGES.TXT
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/down.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/fishy-.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/fishy0.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/fishy1.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/fishy2.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/fishy3.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/hidden.jpg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/insert1.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/kcas1_1.jpg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/kcas1_2.jpg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/kcas1_3.jpg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/kcas1_4.jpg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/kcas2_1.jpg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/kcas2_2.jpg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/kcas2_3.jpg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/kcas2_4.jpg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/kcas3_1.jpg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/kcas3_2.jpg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/kcas3_3.jpg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/kcas3_4.jpg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/left.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/line2.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/main_bkg.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/num_0.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/nosound.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/num_1.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/num_2.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/num_3.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/num_4.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/num_5.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/num_6.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/num_7.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/num_8.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/num_9.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/pract.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/right.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/splat0.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/sound.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/standby.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/title1.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/tutor-alpha.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/tutor-alpha2.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/tutor.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/tutor2.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/tutor3.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/tux0.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/tux1.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/tux2.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/tux3.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/up.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/images/world.png
