
EXTRA_DIST = \
tuxi.ogg\
alarm.wav\
bite.wav\
buzz.wav\
click.wav\
excuseme.wav\
explosion.wav\
kmus1.wav\
kmus2.wav\
kmus3.wav\
kmus4.wav\
laser.wav\
lose.wav\
pause.wav\
pop.wav\
run.wav\
shieldsdown.wav\
splat.wav\
tock.wav\
win.wav\
winfinal.wav\
game.mod\
game2.mod\
game3.mod\
README_SOUNDS.TXT

install-data-local:
	$(MKDIR_P) $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds
	$(INSTALL_DATA) $(srcdir)/tuxi.ogg $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/tuxi.ogg
	$(INSTALL_DATA) $(srcdir)/alarm.wav $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/alarm.wav
	$(INSTALL_DATA) $(srcdir)/bite.wav $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/bite.wav
	$(INSTALL_DATA) $(srcdir)/buzz.wav $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/buzz.wav
	$(INSTALL_DATA) $(srcdir)/click.wav $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/click.wav
	$(INSTALL_DATA) $(srcdir)/excuseme.wav $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/excuseme.wav
	$(INSTALL_DATA) $(srcdir)/explosion.wav $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/explosion.wav
	$(INSTALL_DATA) $(srcdir)/kmus1.wav $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/kmus1.wav
	$(INSTALL_DATA) $(srcdir)/kmus2.wav $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/kmus2.wav
	$(INSTALL_DATA) $(srcdir)/kmus3.wav $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/kmus3.wav
	$(INSTALL_DATA) $(srcdir)/kmus4.wav $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/kmus4.wav
	$(INSTALL_DATA) $(srcdir)/laser.wav $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/laser.wav
	$(INSTALL_DATA) $(srcdir)/lose.wav $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/lose.wav
	$(INSTALL_DATA) $(srcdir)/pause.wav $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/pause.wav
	$(INSTALL_DATA) $(srcdir)/pop.wav $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/pop.wav
	$(INSTALL_DATA) $(srcdir)/run.wav $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/run.wav
	$(INSTALL_DATA) $(srcdir)/shieldsdown.wav $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/shieldsdown.wav
	$(INSTALL_DATA) $(srcdir)/splat.wav $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/splat.wav
	$(INSTALL_DATA) $(srcdir)/tock.wav $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/tock.wav
	$(INSTALL_DATA) $(srcdir)/win.wav $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/win.wav
	$(INSTALL_DATA) $(srcdir)/winfinal.wav $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/winfinal.wav
	$(INSTALL_DATA) $(srcdir)/game.mod $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/game.mod
	$(INSTALL_DATA) $(srcdir)/game2.mod $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/game2.mod
	$(INSTALL_DATA) $(srcdir)/game3.mod $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/game3.mod
	$(INSTALL_DATA) $(srcdir)/README_SOUNDS.TXT $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/README_SOUNDS.TXT

uninstall-local:
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/tuxi.ogg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/alarm.wav
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/bite.wav
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/buzz.wav
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/click.wav
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/excuseme.wav
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/explosion.wav
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/kmus1.wav
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/kmus2.wav
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/kmus3.wav
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/kmus4.wav
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/laser.wav
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/lose.wav
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/pause.wav
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/pop.wav
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/run.wav
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/shieldsdown.wav
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/splat.wav
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/tock.wav
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/win.wav
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/winfinal.wav
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/game.mod
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/game2.mod
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/game3.mod
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/data/sounds/README_SOUNDS.TXT
