####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = index.html index-1.html index-2.html index-3.html index-4.html index-5.html index-6.html 

install-data-local:
	$(mkinstalldirs) $(DESTDIR)$(docdir)/tuxtype/
	$(INSTALL_DATA) $(srcdir)/index.html $(DESTDIR)$(docdir)/tuxtype/index.html
	$(mkinstalldirs) $(DESTDIR)$(docdir)/tuxtype/
	$(INSTALL_DATA) $(srcdir)/index-1.html $(DESTDIR)$(docdir)/tuxtype/index-1.html
	$(mkinstalldirs) $(DESTDIR)$(docdir)/tuxtype/
	$(INSTALL_DATA) $(srcdir)/index-2.html $(DESTDIR)$(docdir)/tuxtype/index-2.html
	$(mkinstalldirs) $(DESTDIR)$(docdir)/tuxtype/
	$(INSTALL_DATA) $(srcdir)/index-3.html $(DESTDIR)$(docdir)/tuxtype/index-3.html
	$(mkinstalldirs) $(DESTDIR)$(docdir)/tuxtype/
	$(INSTALL_DATA) $(srcdir)/index-4.html $(DESTDIR)$(docdir)/tuxtype/index-4.html
	$(mkinstalldirs) $(DESTDIR)$(docdir)/tuxtype/
	$(INSTALL_DATA) $(srcdir)/index-5.html $(DESTDIR)$(docdir)/tuxtype/index-5.html
	$(mkinstalldirs) $(DESTDIR)$(docdir)/tuxtype/
	$(INSTALL_DATA) $(srcdir)/index-6.html $(DESTDIR)$(docdir)/tuxtype/index-6.html

uninstall-local:
	-rm -f $(DESTDIR)$(docdir)/tuxtype/index.html
	-rm -f $(DESTDIR)$(docdir)/tuxtype/index-1.html
	-rm -f $(DESTDIR)$(docdir)/tuxtype/index-2.html
	-rm -f $(DESTDIR)$(docdir)/tuxtype/index-3.html
	-rm -f $(DESTDIR)$(docdir)/tuxtype/index-4.html
	-rm -f $(DESTDIR)$(docdir)/tuxtype/index-5.html
	-rm -f $(DESTDIR)$(docdir)/tuxtype/index-6.html

####### kdevelop will overwrite this part!!! (end)############
