## Makefile.am for tuxtype - data/themes/asturian/scripts:
## Process with Automake to create Makefile.in

themes_asturian_scriptsdir = $(pkgdatadir)/themes/asturian/scripts

dist_themes_asturian_scripts_DATA = projectInfo.xml \
  cascade.xml \
  laser.xml \
  lleicion_basica_01.xml \
  lleicion_basica_02.xml \
  lleicion_basica_03.xml \
  lleicion_basica_04.xml \
  lleicion_basica_05.xml \
  lleicion_basica_06.xml \
  lleicion_basica_07.xml \
  lleicion_basica_08.xml \
  lleicion_basica_09.xml \
  lleicion_basica_10.xml \
  lleicion_basica_11.xml \
  lleicion_basica_12.xml \
  lleicion_basica_13.xml \
  lleicion_basica_14.xml \
  lleicion_basica_15.xml \
  lleicion_basica_16.xml \
  lleicion_basica_17.xml \
  lleicion_basica_18.xml \
  lleicion_basica_19.xml \
  lleicion_basica_20.xml \
  lleicion_basica_21.xml \
  lleicion_basica_22.xml \
  lleicion_basica_23.xml \
  lleicion_basica_24.xml \
  lleicion_basica_25.xml \
  lleicion_basica_26.xml \
  lleicion_basica_27.xml \
  lleicion_basica_28.xml \
  lleicion_basica_29.xml \
  lleicion_basica_30.xml \
  lleicion_basica_31.xml \
  lleicion_basica_32.xml \
  lleicion_basica_33.xml \
  lleicion_basica_34.xml \
  lleicion_basica_35.xml \
  lleicion_basica_36.xml \
  lleicion_basica_37.xml \
  lleicion_basica_38.xml \
  lleicion_basica_39.xml \
  lleicion_basica_40.xml \
  lleicion_basica_41.xml \
  lleicion_basica_42.xml
